plugins {
    id "jacoco"
    id "org.sonarqube" version "3.3"
}

allprojects {
    apply plugin: "java"
    apply plugin: "jacoco"
    apply plugin: "org.sonarqube"

    ext {
        bootVersion = '2.4.2'
        awsSdkVersion = '1.11.914'
        jacksonVersion = '2.11.4'
        lombokVersion = '1.18.24'
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
        testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
        testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

        testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.3.1'
        testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.6.28'
        testImplementation 'org.assertj:assertj-core:3.18.1'
        testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    }

    test {
        useJUnitPlatform()
    }

    jacocoTestReport.dependsOn test
    test.finalizedBy jacocoTestReport

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}